apps/base/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  selector:
    app: tautulli
  ports:
    - name: http
      port: 8181
      protocol: TCP
      targetPort: http
